# Event-Mailer-Scheduler

./: .env  .env.example  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  wsgi.py
app/: app.py
dashboard/: index.html
internal/: app.py  routers.py
internal/migrations/: env.py
internal/migrations/versions/: 532a5f5e3366_initial_migration.py  bf9bec6a2cc4_recipient_email.py
internal/models/: email.py  email_recipient.py
internal/schedulers/: email_scheduler.py
internal/schemas/: email_recipient_schema.py  email_schema.py
internal/services/: email_recipient_service.py  email_service.py
internal/utils/: config.py  db.py  errors.py  mailer.py  response.py
internal/views/: dashboard_controller.py  email_controller.py
tests/: test_mail_service.py
